--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   image_picker: ^0.8.5
   geolocator: ^8.2.0
   geocoding: ^2.0.4
+  firebase_core: ^1.15.0
+  firebase_auth: ^3.3.16
+  cloud_firestore: ^3.1.13
+  firebase_storage: ^10.2.14
 
 dev_dependencies:
   flutter_test:
