--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.13
   firebase_storage: ^10.2.14
   shared_preferences: ^2.0.13
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
